--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eject": "cgb-scripts eject"
   },
   "dependencies": {
-    "cgb-scripts": "1.11.0",
-    "classnames": "^2.2.5"
+    "cgb-scripts": "^1.18.1",
+    "classnames": "^2.2.6"
   }
 }
